Scrollbar fixed

--- a/src/ui-elements/nexus-grid/NexusGrid.scss
+++ b/src/ui-elements/nexus-grid/NexusGrid.scss
@@ -5,5 +5,9 @@
     &--auto-height {
         flex: none;
     }
+    
+    &--overflow.ag-theme-balham * {
+        // overflow: overlay;
+    }
 };
 
